--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Optimized font loading -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
     
-    <title>Triarc Infrastructure - Architecture & Construction</title>
+    <title>triarc Infrastructure - Architecture & Construction</title>
   </head>
   <body>
     <div id="app"></div>
